12 August 2016: Wouter
	- Fix #817: xfrd update failed loop.

9 August 2016: Wouter
	- Can config key algorithms with the digest name, eg. 'sha256'.
	- default tsig algorithm is sha256.
	- Fix typo in log output, 'transfered' -> 'transferred'.
	- Fix compile warnings about signcompare in minmax retrytime.

8 August 2016: Wouter
	- Support syntax of RR type OPENPGPKEY from RFC 7929.

5 August 2016: Wouter
	- multi-master-check: yes can be used to check all masters for the
	  last version, using the higher version from the configured masters,
	  from Manabu Sonoda.
	- small fixups on patch.  And fix spacing and remove configure flag.
	- Fix #812: make depend fails after distribution.

2 August 2016: Wouter
	- Fix unused result warnings from write and strtol.

1 August 2016: Wouter
	- Tag 4.1.11rc1.
	- Fix nsec3 missing for nsec3 signed parent and child for DS at zonecut.
	- Tag 4.1.11rc2.
	- trunk is 4.1.12 in development.

8 July 2016: Wouter
	- Note down tracking numbers for issue JVN#63359718 JPCERT#91251865.

5 July 2016: Wouter
	- Fix #790: size-limit-xfr can stop NSD from downloading infinite zone
	  transfer data size, from Toshifumi Sakaguchi.

27 June 2016: Wouter
	- Set default for min-refresh-time and min-retry-time to 0.  Behaves
	  just like before, but has a configurable option in nsd.conf.
	- Fix #783: Trying to run a root server without having configured it
	  silently gives wrong answers.

16 June 2016: Wouter
	- When tcp is more than half full, use short timeout for tcp session.
	- Patch for {max,min}-{refresh,retry}-time from YAMAGUCHI Takanori.
	- man page entries for max-refresh-time patch.

15 June 2016: Wouter
	- Fix build without IPv6, patch from Zdenek Kaspar.

14 June 2016: Wouter
	- release 4.1.10 and tag for that.
	- trunk has 4.1.11 in development.

7 June 2016: Wouter
	- Fix NSEC3 ent fix to use closest encloser, not wildcard denial.

2 June 2016: Wouter
	- Fix for NSEC3 with zone signed without exact match for empty